--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
